--- a/docs/_sass/_base.scss
+++ b/docs/_sass/_base.scss
@@ -1,3 +1,12 @@
+---
+---
+
+.table{
+	border: 2px solid red;
+	border-collapse: collapse;
+}
+
+
 table{
 	border: 2px solid red;
 	border-collapse: collapse;
