--- a/docs/_sass/_layout/default.html
+++ b/docs/_sass/_layout/default.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>Sass Example Site</title>
-  <link rel="stylesheet" href="{{ '/docs/css/main.css' | relative_url }}" />
+  <link rel="stylesheet" href="{{ './docs/css/main.css' | relative_url }}" />
 </head>
 <body>
+  <div class="test1">TestOneClass</div>
   <section class="content">
     {{ content }}
   </section>
