--- a/docs/_layout/default.html
+++ b/docs/_layout/default.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>Sass Example Site</title>
-  <!-- <link rel="stylesheet" href="{{ './docs/css/main.css' | relative_url }}" /> -->
+  <link rel="stylesheet" href="{{ '/css/main.css' | relative_url }}" />
 </head>
 <body>
   <div class="test1">TestOneClass</div>
+  <div class="test2">Test2Class</div>
   <section class="content">
     {{ content }}
   </section>
