--- a/assets/css/site.scss
+++ b/assets/css/site.scss
@@ -8,3 +8,16 @@
 .test2 {
 	color: aqua;
 }
+
+.content {
+	margin-right: 40px;
+    margin-left: 40px;
+    // padding: 15px 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+
+table {
+	border: 1px solid black;
+	border-collapse: collapse;
+}
