--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,7 @@
 ---
 ---
 
+@import "/docs/_sass/_tables.scss";
 // @import "{{ site.theme }}";
 
 // site CSS
@@ -14,7 +15,7 @@
 	margin-right: 40px;
     margin-left: 40px;
     // padding: 15px 0;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 
