--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,6 +18,17 @@
 	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+.container-lg {
+	margin-right: 40px !important;
+    margin-left: 40px !important;
+    // padding: 15px 0;
+}
+
+
+.markdown-body {
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+}
 
 table {
 	border: 1px solid black;
