--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,18 +19,18 @@
 }
 
 .container-lg {
-	margin-right: 40px !important;
-    margin-left: 40px !important;
+	margin-right: 20px !important;
+    margin-left: 20px !important;
     // padding: 15px 0;
 }
 
 
 .markdown-body {
-	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 table {
-	border: 1px solid black;
+	@extend .table-striped;
+	border: 1px solid blue;
 	border-collapse: collapse;
 }
