--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,9 +24,13 @@
     // padding: 15px 0;
 }
 
+header {
+	display: none;
+}
 
 .markdown-body {
-	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	// font-family: Verdana, Geneva, Tahoma, sans-serif;
+	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 table {
