--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -34,7 +34,10 @@ header {
 }
 
 table {
+	@extend .table;
+	@extend .table-bordered;
 	@extend .table-striped;
-	border: 1px solid blue;
+	
 	border-collapse: collapse;
 }
+
