--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -38,12 +38,12 @@ table {
 	@extend .table-bordered;
 	@extend .table-striped;
 	@extend .table-sm;
-	@extend .thead-dark;
-	border-collapse: collapse;
+	// border-collapse: collapse;
 }
 
 th {
 	background-color: cornflowerblue !important;
+	text-align: left;
 }
 
 td {
