--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -38,7 +38,7 @@ table {
 	@extend .table-bordered;
 	@extend .table-striped;
 	@extend .table-sm;
-	// border-collapse: collapse;
+	border-collapse: collapse;
 }
 
 th {
@@ -48,4 +48,13 @@ th {
 
 td {
 	text-align: left;
+}
+
+table tr td:nth-child(1) {
+	width: 30px;
+}
+
+table tr td:nth-child(2) {
+	width: 40px;
+	text-align: right;
 }
