--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,6 +6,18 @@
 
 // site CSS
 
+@font-face {
+    font-family: 'Roboto';
+    src: url('Roboto-ThinItalic-webfont.eot');
+    src: url('Roboto-ThinItalic-webfont.eot?#iefix') format('embedded-opentype'),
+         url('Roboto-ThinItalic-webfont.woff') format('woff'),
+         url('Roboto-ThinItalic-webfont.ttf') format('truetype'),
+         url('Roboto-ThinItalic-webfont.svg#RobotoThinItalic') format('svg');
+    font-weight: 200;
+    font-style: italic;
+}
+
+
 .test2 {
 	color: aqua;
 }
@@ -15,7 +27,7 @@
 	margin-right: 40px;
     margin-left: 40px;
     // padding: 15px 0;
-	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+	font-family: 'Roboto', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .container-lg {
@@ -58,3 +70,10 @@ table tr td:nth-child(2) {
 	width: 40px;
 	text-align: right;
 }
+
+
+
+// @font-face {
+//     font-family: 'YourFontName'; /*a name to be used later*/
+//     src: url('http://domain.com/fonts/font.ttf'); /*URL to font*/
+// }
