--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,16 +6,19 @@
 
 // site CSS
 
-@font-face {
-    font-family: 'Roboto';
-    src: url('Roboto-ThinItalic-webfont.eot');
-    src: url('Roboto-ThinItalic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('Roboto-ThinItalic-webfont.woff') format('woff'),
-         url('Roboto-ThinItalic-webfont.ttf') format('truetype'),
-         url('Roboto-ThinItalic-webfont.svg#RobotoThinItalic') format('svg');
-    font-weight: 200;
-    font-style: italic;
-}
+@import url('https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Roboto+Mono&display=swap');
+
+
+// @font-face {
+//     font-family: 'Roboto';
+//     src: url('Roboto-ThinItalic-webfont.eot');
+//     src: url('Roboto-ThinItalic-webfont.eot?#iefix') format('embedded-opentype'),
+//          url('Roboto-ThinItalic-webfont.woff') format('woff'),
+//          url('Roboto-ThinItalic-webfont.ttf') format('truetype'),
+//          url('Roboto-ThinItalic-webfont.svg#RobotoThinItalic') format('svg');
+//     font-weight: 200;
+//     font-style: italic;
+// }
 
 
 .test2 {
@@ -27,7 +30,8 @@
 	margin-right: 40px;
     margin-left: 40px;
     // padding: 15px 0;
-	font-family: 'Roboto', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+	// font-family: 'Roboto', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+	font-family: 'Roboto';
 }
 
 .container-lg {
