--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,9 +9,10 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Roboto+Mono&display=swap');
 
 
-// @font-face {
-//     font-family: 'Roboto';
-//     src: url('Roboto-ThinItalic-webfont.eot');
+@font-face {
+    font-family: 'Roboto';
+	src: url('https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Roboto+Mono&display=swap');
+	//     src: url('Roboto-ThinItalic-webfont.eot');
 //     src: url('Roboto-ThinItalic-webfont.eot?#iefix') format('embedded-opentype'),
 //          url('Roboto-ThinItalic-webfont.woff') format('woff'),
 //          url('Roboto-ThinItalic-webfont.ttf') format('truetype'),
