--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,7 +19,7 @@
 //          url('Roboto-ThinItalic-webfont.svg#RobotoThinItalic') format('svg');
 //     font-weight: 200;
 //     font-style: italic;
-// }
+}
 
 
 .test2 {
