--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -32,7 +32,7 @@
     margin-left: 40px;
     // padding: 15px 0;
 	// font-family: 'Roboto', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-	font-family: 'Roboto';
+	font-family: 'Roboto' !important;
 }
 
 .container-lg {
