--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -6,3 +6,12 @@
 table {
 	border: 1px solid red;
 }
+
+@font-face {
+    font-family: 'Roboto';
+    src: url('https://fonts.googleapis.com/css?family=Roboto:200');
+}
+
+body {
+	font-family: 'Roboto';
+}
