--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -41,7 +41,8 @@ header {
 
 .markdown-body {
     // font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Roboto' !important;
+    // font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 table {
