--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -58,7 +58,8 @@ table {
 }
 
 th {
-    background-color: cornflowerblue !important;
+    background-color:  rgb(0, 34, 117) !important;
+    color: whitesmoke;
     text-align: left;
 }
 
