--- a/docs/css/xpi-search.css
+++ b/docs/css/xpi-search.css
@@ -167,3 +167,15 @@
 .grid-label-top {
 	align-self: start;
 }
+
+.index-links-block {
+	padding-left: 24px;
+}
+
+.index-links {
+	font-family: "Roboto" !important;
+	font-size: 16px !important;
+	font-weight: 500 !important;
+	text-decoration: none;
+	color: rgb(0, 34, 117);
+}
