--- a/docs/css/xpi-search.css
+++ b/docs/css/xpi-search.css
@@ -179,3 +179,11 @@
 	text-decoration: none;
 	color: rgb(0, 34, 117);
 }
+
+a {
+	font-family: "Roboto" !important;
+	font-size: 16px !important;
+	font-weight: 575 !important;
+	text-decoration: none;
+	color: rgb(0, 34, 117);
+}
