--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -65,10 +65,14 @@ th {
 
 td {
     text-align: left;
+    padding-left: 4px;
+    padding-right: 4px;
 }
+
 
 table tr td:nth-child(1) {
     width: 30px;
+    font-weight: bold;
 }
 
 table tr td:nth-child(2) {
