--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -80,6 +80,11 @@ table tr td:nth-child(2) {
     text-align: right;
 }
 
+table tr td:nth-child(5) {
+    width: 60px;
+    text-align: right;
+}
+
 // @font-face {
 //     font-family: 'YourFontName'; /*a name to be used later*/
 //     src: url('http://domain.com/fonts/font.ttf'); /*URL to font*/
