--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -81,8 +81,9 @@ table tr td:nth-child(2) {
 }
 
 table tr td:nth-child(5) {
-    width: 60px;
+    width: 100%;
     text-align: right;
+    background-color: yellow;
 }
 
 // @font-face {
