--- a/xall/x68/987773-deepdark-for-thunderbird/src/skin/os/linux/accountCreation.css
+++ b/xall/x68/987773-deepdark-for-thunderbird/src/skin/os/linux/accountCreation.css
@@ -6,13 +6,13 @@
  * subject to the theme's terms of use. For more information you can
  * consult the README_LICENSE.txt file included in the theme's package. */
 
-menulist[editable="true"][is="menulist-editable"] .menulist-dropmarker:-moz-locale-dir(ltr) {
+#autoconfigWizard menulist[editable="true"][is="menulist-editable"] .menulist-dropmarker:-moz-locale-dir(ltr) {
 /* DeepDark custom CSS */
   margin-right: -10px !important;
 /* DeepDark custom CSS - end */ 
 }
 
-menulist[editable="true"][is="menulist-editable"] .menulist-dropmarker:-moz-locale-dir(rtl) {
+#autoconfigWizard menulist[editable="true"][is="menulist-editable"] .menulist-dropmarker:-moz-locale-dir(rtl) {
 /* DeepDark custom CSS */
   margin-left: -10px !important;
 /* DeepDark custom CSS - end */ 
