--- a/xall/x68/987773-deepdark-for-thunderbird/src/skin/os/mac/messenger.css
+++ b/xall/x68/987773-deepdark-for-thunderbird/src/skin/os/mac/messenger.css
@@ -42,3 +42,21 @@ button.button-menu-list {
   padding-bottom: 2px;
 /* DeepDark custom CSS - end */
 }
+
+.contentTabUrlbar[class] {
+/* DeepDark custom CSS */
+  margin-inline-start: -30px !important;
+/* DeepDark custom CSS - end */
+}
+
+.contentTabUrlbar[class] > .input-inline {
+/* DeepDark custom CSS */
+  padding-inline-start: 30px !important;
+/* DeepDark custom CSS - end */
+}
+
+.contentTabUrlbar > .input-inline.themeableSearchBox {
+/* DeepDark custom CSS */
+  background-image: none !important;
+/* DeepDark custom CSS - end */
+}
