--- a/xall/x68/987773-deepdark-for-thunderbird/src/skin/messenger.css
+++ b/xall/x68/987773-deepdark-for-thunderbird/src/skin/messenger.css
@@ -264,6 +264,19 @@ alltabs-item[busy],
 /* DeepDark custom CSS - end */
 }
 
+.contentTabUrlbar {
+/* DeepDark custom CSS */
+  max-width: 100% !important;
+  margin-inline-start: -35px !important;
+/* DeepDark custom CSS - end */
+}
+  
+.contentTabUrlbar > .input-inline {
+/* DeepDark custom CSS */
+  padding-inline-start: 30px !important;
+/* DeepDark custom CSS - end */
+}
+
 
 /* ::: Custom Favicons ::: */
 
